--- a/.github/workflows/pinata-deploy.yml
+++ b/.github/workflows/pinata-deploy.yml
@@ -46,7 +46,7 @@ jobs:
         run: npm install
 
       - name: Install ipfs-deploy
-        run: npm install ipfs-deploy
+        run: npm install -g ipfs-deploy
 
       - name: Build Kovan
         run: npm run build-pinata
