--- a/.github/workflows/pinata-deploy.yml
+++ b/.github/workflows/pinata-deploy.yml
@@ -41,12 +41,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-
-      - name: Install dependencies
-        run: npm install
+      - uses: actions/setup-node@v1
 
       - name: Install ipfs-deploy
         run: npm install -g ipfs-deploy
+
+      - name: Install dependencies
+        run: npm install
 
       - name: Build Kovan
         run: npm run build-pinata
