--- a/.github/workflows/pinata-deploy.yml
+++ b/.github/workflows/pinata-deploy.yml
@@ -53,16 +53,22 @@ jobs:
         run: npm run build-pinata
         env:
           APP_CHAIN_ID: 42
-          APP_GAS_PRICE: 770000000000
+          APP_GAS_PRICE: 880000000000
 
       - name: Deploy Kovan
-        run: ipfs-deploy ./dist
+        run: ipfs-deploy ./dist -p pinata
+        env:
+          IPFS_DEPLOY_PINATA__API_KEY: ${{ secrets.IPFS_DEPLOY_PINATA__API_KEY }}
+          IPFS_DEPLOY_PINATA__SECRET_API_KEY: ${{ secrets.IPFS_DEPLOY_PINATA__SECRET_API_KEY }}
 
       - name: Build Mainnet
         run: npm run build-pinata
         env:
           APP_CHAIN_ID: 1
-          APP_GAS_PRICE: 220000000000
+          APP_GAS_PRICE: 330000000000
 
       - name: Deploy Mainnet
-        run: ipfs-deploy ./dist
+        run: ipfs-deploy ./dist -p pinata
+        env:
+          IPFS_DEPLOY_PINATA__API_KEY: ${{ secrets.IPFS_DEPLOY_PINATA__API_KEY }}
+          IPFS_DEPLOY_PINATA__SECRET_API_KEY: ${{ secrets.IPFS_DEPLOY_PINATA__SECRET_API_KEY }}
