--- a/.github/workflows/pinata-deploy.yml
+++ b/.github/workflows/pinata-deploy.yml
@@ -56,7 +56,7 @@ jobs:
           APP_GAS_PRICE: 990000000000
 
       - name: Deploy Kovan
-        run: ipfs-deploy ./dist -p pinata
+        run: ipfs-deploy ./dist -p pinata -d cloudflare
         env:
           IPFS_DEPLOY_PINATA__API_KEY: ${{ secrets.IPFS_DEPLOY_PINATA__API_KEY }}
           IPFS_DEPLOY_PINATA__SECRET_API_KEY: ${{ secrets.IPFS_DEPLOY_PINATA__SECRET_API_KEY }}
@@ -71,7 +71,7 @@ jobs:
           APP_GAS_PRICE: 440000000000
 
       - name: Deploy Beta
-        run: ipfs-deploy ./dist -p pinata
+        run: ipfs-deploy ./dist -p pinata -d cloudflare
         env:
           IPFS_DEPLOY_PINATA__API_KEY: ${{ secrets.IPFS_DEPLOY_PINATA__API_KEY }}
           IPFS_DEPLOY_PINATA__SECRET_API_KEY: ${{ secrets.IPFS_DEPLOY_PINATA__SECRET_API_KEY }}
